<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="HardcodedText">

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_camera"
            android:iconTint="@color/purple_500"
            android:title="@string/nav_profile" />


        <!--<item
            android:id="@+id/nav_income"
            android:title="@string/nav_income" />-->

        <item
            android:id="@+id/nav_savings"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/nav_savings" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout" />

    </menu>
