<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="380dp"
                    android:layout_height="335dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="307dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"
                        android:src="@drawable/harrier" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="307dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:gravity="center"
                        android:text="@string/harrier"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="338dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="220dp"
                        android:text="@string/harrier_model"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="230dp"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center"
                        android:text="@string/harrier_fuel"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="250dp"
                        android:text="@string/harrier_price"
                        android:textColor="@color/colorAccent"
                        android:textColorHighlight="@color/btnColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/emi_btn"
                        app:backgroundTint="@color/colorAccent" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view1"
                    android:layout_width="380dp"
                    android:layout_height="335dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:layout_width="307dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"
                        android:src="@drawable/thar" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="307dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:gravity="center"
                        android:text="@string/thar"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="338dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="220dp"
                        android:text="@string/thar_model"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="230dp"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center"
                        android:text="@string/thar_fuel"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="250dp"
                        android:text="@string/thar_price"
                        android:textColor="@color/colorAccent"
                        android:textColorHighlight="@color/btnColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/emi_btn"
                        app:backgroundTint="@color/colorAccent" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view2"
                    android:layout_width="380dp"
                    android:layout_height="335dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="307dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"
                        android:src="@drawable/nexon" />
                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="307dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:gravity="center"
                        android:text="@string/nexon"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="338dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="220dp"
                        android:text="@string/nexon_model"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="230dp"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center"
                        android:text="@string/nexon_fuel"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="250dp"
                        android:text="@string/nexon_price"
                        android:textColor="@color/colorAccent"
                        android:textColorHighlight="@color/btnColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/emi_btn"
                        app:backgroundTint="@color/colorAccent" />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view3"
                    android:layout_width="380dp"
                    android:layout_height="335dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="307dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"
                        android:src="@drawable/fortuner" />
                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="307dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:gravity="center"
                        android:text="@string/fortuner"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"/>
                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="338dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="220dp"
                        android:text="@string/fortuner_model"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="230dp"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center"
                        android:text="@string/fortuner_fuel"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="250dp"
                        android:text="@string/fortuner_price"
                        android:textColor="@color/colorAccent"
                        android:textColorHighlight="@color/btnColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/emi_btn"
                        app:backgroundTint="@color/colorAccent" />

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view4"
                    android:layout_width="380dp"
                    android:layout_height="335dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp">
                    <ImageView
                        android:layout_width="307dp"
                        android:layout_height="175dp"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="5dp"
                        android:background="#c1c1c1"
                        android:src="@drawable/hyundai_creta" />
                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="307dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:gravity="center"
                        android:text="@string/creta"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        />
                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="338dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="220dp"
                        android:text="@string/creta_model"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="95dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="230dp"
                        android:layout_marginLeft="230dp"
                        android:layout_marginTop="250dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center"
                        android:text="@string/creta_fuel"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="250dp"
                        android:text="@string/creta_price"
                        android:textColor="@color/colorAccent"
                        android:textColorHighlight="@color/btnColor"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="280dp"
                        android:text="@string/emi_btn"
                        app:backgroundTint="@color/colorAccent" />

                </androidx.cardview.widget.CardView>







            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





